--- a/src/pages/cart/Carts.scss
+++ b/src/pages/cart/Carts.scss
@@ -56,7 +56,7 @@
         .cartListContainerItem {
           display: flex;
           align-items: center;
-          justify-content: space-around;
+          justify-content: space-between;
           height: auto;
           padding: 10px;
           width: 100%;
@@ -71,24 +71,17 @@
             object-fit: cover;
             border-radius: 10px;
           }
-          .titleDesc {
-            h1 {
-              color: #1e1e1e;
-              font-family: Poppins;
-              font-size: 25px;
-              font-style: normal;
-              font-weight: 500;
-              line-height: normal;
-            }
-            p {
-              color: #1e1e1e;
-              font-family: Nunito;
-              font-size: 16px;
-              font-style: normal;
-              font-weight: 500;
-              line-height: normal;
-            }
+
+          h1 {
+            width: 300px;
+            color: #1e1e1e;
+            font-family: Poppins;
+            font-size: 25px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
           }
+
           .count {
             display: flex;
             gap: 10px;
@@ -112,6 +105,7 @@
       border-radius: 20px;
       background: #565abb;
       width: 30%;
+      height: 670px;
       color: white;
       display: flex;
       flex-direction: column;
