--- a/src/pages/description/Description.scss
+++ b/src/pages/description/Description.scss
@@ -4,7 +4,7 @@
   .descContainer {
     width: 100%;
     max-width: 1024px;
-    padding: 50px 20px;
+    padding: 50px 10px;
     display: flex;
     justify-content: space-between;
     margin: auto;
@@ -89,6 +89,26 @@
         color: white;
         border-radius: 10px;
         cursor: pointer;
+      }
+    }
+  }
+}
+
+//media queries
+@media (max-width: 768px) {
+  .description {
+    .descContainer {
+      flex-direction: column;
+
+      .left {
+        .leftContainer {
+          width: 100%;
+          height: 100%;
+
+          img {
+            width: 100%;
+          }
+        }
       }
     }
   }
